--- a/default/modules-counter.yml
+++ b/default/modules-counter.yml
@@ -1,6 +1,7 @@
 loritta:
   modules:
     counter:
+      auditLogReason: "Atualizar contador de membros"
       theme:
         default: "Padrão"
         red: "Vermelho"
