--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -2,6 +2,10 @@ commands:
   moderation:
     dashboard:
       description: "Envia o link do Dashboard para adicionar/configurar a Loritta"
+    renamechannel:
+      description: "Renomea canais de texto com espaço"
+      successfullyrenamed: "Canal renomeado com sucesso!"
+      channelnotfound: "Canal não encontrado!"
     unmute:
       punish-action: "Retirado o Silenciamento"
       punish-name: "remover o silenciamento"
