--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -22,5 +22,5 @@ commands:
     unmute:
       punishAction: "Retirado o Silenciamento"
       punishName: "remover o silenciamento"
-      sucessfullyUnmuted: "O usuário aprendeu a falar novamente, espero que dessa vez ele fale coisas interessantes e legais para que não seja silenciado de novo!"
+      successfullyUnmuted: "O usuário aprendeu a falar novamente, espero que dessa vez ele fale coisas interessantes e legais para que não seja silenciado de novo!"
       automaticallyExpired: "Após muito tempo silenciado... o usuário finalmente aprendeu a falar novamente! Espero que dessa vez ele fale coisas interessantes e legais para que não seja silenciado de novo!"
