--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -8,6 +8,9 @@ commands:
       channelNotFound: "Canal não encontrado! (Tentei procurar por nome de canal, ID e menção de canal e eu não encontrei nada!)"
       channelConflict: "Existem dois canais com o mesmo nome (ou parecido) com tipos diferentes, tente usar ID (ou menção do canal) invés de usar nome de canal!"
       cantRename: "Não consegui renomear o canal..."
+    mute:
+      duration: "Duração"
+      forever: "Permanente"
     unmute:
       punish-action: "Retirado o Silenciamento"
       punish-name: "remover o silenciamento"
