--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -27,3 +27,6 @@ commands:
     emoteNameLength2Error: "O nome que você quer renomear é menor do que 2 caracteres!"
     emoteNameSpecialChar: "O nome que você quer renomear tem caracteres especiais!"
     renameSucess: "Emoji renomeado!"
+  guildbanner:
+    noBanner: "Esse servidor não tem banner!"
+ 
