--- a/en-us/commands.yml
+++ b/en-us/commands.yml
@@ -1,157 +1,150 @@
-please-wait-cooldown: "Calm down! you need to wait more **{0}** before execute another command! {1}"
-error-while-executing-command: "Something went extremely wrong while executing this command... 😭 Sorry for the inconvenience. 😢"
-cant-use-in-private: "You can''t use this command in private messages!"
-user-does-not-exists: "This user doesn''t exist!"
-doesnt-have-permission-discord: "You don''t have permission to use this command! To use it, you need to have permission to {0}!"
-lori-doesnt-have-permission-discord: "I wish I could execute this command, but unfortunately I don''t have permission to {0}... {1} Ask an administrator to give this permission to me! Thanks! {2}"
-command-only-for-owner: "Only special people can use this command :3"
-arguments:
-  text: "text"
-  number: "number"
-  user: "user"
-  emote: "emoji"
-  image: "image"
-# DIVERSÃO
-entertainment: # O nome não é "fun" porque "fun" é uma palavra reservada em Kotlin
-  roll:
-    description: "Rolls a dice and tells the result. Really usefoul when you are playing Monopoly but have lost the dices."
-    how-much-sides: "How many sides will the dice have"
-  vieirinha:
-    description: "Vieirinha is the oracle for anything that you might want to know. What about asking him something?"
+commands:
+  noValidImageFound: Sorry, I did not find any image I could use! I try to get images on links, attached images, avatars of mentioned users, emojis... but I did not find any of that in your message. {0}
+  didYouMeanCommand: But I think you wanted to write `{0}`
+  pleaseWaitCooldown: Calm down! You must wait **{0}** before you can run another command! {1}
+  loriDoesntHavePermissionDiscord: I wanted to run this command but unfortunately I am not allowed to {0}... {1} Ask someone from the administration to give this permission to me! Thank you! {2}
+  commandOnlyForOwner: Only special people can use this command :3
+  userDoesntHavePermissionDiscord: You are not allowed to use this command! To use it, you must have permission to {0}!
+  userDoesNotExist: Non-existent user!
+  errorWhileExecutingCommand: Something went wrong when running this command... {0} Sorry for the inconvenience. {1}
+  arguments:
+    text: text
+    number: number
+    user: user
+    emote: emoji
+    image: image
+  entertainment:
+    roll:
+      description: Rolls a dice and shows its result, useful when you want to play a Monoply game but you lost the dices.
+      howMuchSides: How many sides the dice has
+    vieirinha:
+      description: Vieirinha is the oracle of everything you wish to know in this life, how about you ask him something?
+      examples:
+      - "Do you love me?"
+      - "Is Sonic better than Mario?"
+      - "Will I win the lottery this year?"
+      responses:
+      - "Go annoy another person, thanks."
+      - "I don''t know the answer to that, but I know that I live in Cambuci."
+      - "In my point of view, yes."
+      - "Hmmmm... 🤔"
+      - "I can''t talk about that."
+      - "No."
+      - "Yes."
+      - "I would answer that, but I''d rather not hurt your feelings"
+      - "Probably"
+      - "Probably not"
+      - "You can believe that"
+      - "My answer is no"
+      - "My answer is yes"
+      - "In my point of view, no"
+      - "It''s better not to talk about that now..."
+      - "Yes, of course!"
+      - "I also would like to know that..."
+      - "My answer doesn''t matter. What matters is for you to follow your heart."
+      - "Maybe..."
+      - "I think so."
+      - "I don''t think so."
+      - "Maybe."
+      - "Maybe not."
+      - "Yes!"
+      - "No!"
+      - "¯\\_(ツ)_/¯"
+    vemDeZap:
+      description: Bom dia catilangaiada! Vem de Zap bb, aplique o poder do zapzap na sua mensagem para mostrar como você é 🔝 com as 9inhas do zapzap!
+      examples:
+      - vem de zap bb
+      - eae catilangaiada, ninguém fala nada kkkkkkkkkkkk
+      - zapzap é melhor que o discord, lá a gente tem número de novinhxs!
+  images:
+    bolsoDrake:
+      description: Meme needs to be made in Brazil, okay?
+    drawnMaskSign:
+      description: Faça o {0} segurar uma placa mostrando algo interessante e fofo!
+  actions:
     examples:
-    - "Do you love me?"
-    - "Is Sonic better than Mario?"
-    - "Will I win the lottery this year?"
-    responses:
-    - "Go annoy another person, thanks."
-    - "I don''t know the answer to that, but I know that I live in Cambuci."
-    - "In my point of view, yes."
-    - "Hmmmm... 🤔"
-    - "I can''t talk about that."
-    - "No."
-    - "Yes."
-    - "I would answer that, but I''d rather not hurt your feelings"
-    - "Probably"
-    - "Probably not"
-    - "You can believe that"
-    - "My answer is no"
-    - "My answer is yes"
-    - "In my point of view, no"
-    - "It''s better not to talk about that now..."
-    - "Yes, of course!"
-    - "I also would like to know that..."
-    - "My answer doesn''t matter. What matters is for you to follow your heart."
-    - "Maybe..."
-    - "I think so."
-    - "I don''t think so."
-    - "Maybe."
-    - "Maybe not."
-    - "Yes!"
-    - "No!"
-    - "¯\\_(ツ)_/¯"
-  bolsonaro:
-    description: "What is Bolsonaro looking at in his television?"
-  vem-de-zap:
-    description: "Good morning guys! Come from Whatsapp baby, use the power of Whatsapp in your message to show how 🔝 you are with the Whatsapp''s girls!"
-    examples:
-    - "Come to WhatsApp, baby"
-    - "Hi guys, this group is silent hahaha"
-    - "Whatsapp is better than discord, we have girls'' phone numbers there!"
-images:
-  bolso-drake:
-    description: "Memes have to have a brasillian origin, ok?"
-  drawn-mask-sign:
-    description: "Make {0} hold a sign showing something interesting and cute!"
-# ACTIONS
-actions:
-  examples:
-  - "297153970613387264"
-  - "@MrPowerGamerBR"
-  slap:
-    description: "Use this command with someone that deserves to receive some slaps"
-    response: "**{0} slapped {1}!**"
-    response-anti-idiot: "**How can you sleep at night after trying to slap a girl like me? **{0} slapped {1}!"
-  kiss:
-    description: "Use this command to kiss someone"
-    response: "**{0} kissed {1}!**"
-    response-anti-idiot: "Nah, I don''t want to kiss you... but I still like you as a friend!"
-  attack:
-    description: "Use this command to attack someone"
-    response: "**{0} attacked {1}!**"
-    response-anti-idiot: "**How you dare you do this to me? **{0} attacked {1}!"
-  hug:
-    description: "Use this command to give a sweet hug to someone"
-    response: "**{0} hugged {1}!**"
-  dance:
-    description: "Use this command to dance with someone"
-    response: "**{0} danced with {1}!**"
-# MODERAÇÃO
-moderation:
-  unmute:
-    punish-action: "Unmuted"
-    punish-name: "unmute"
-    sucessfully-unmuted: "The user has learned to speak again, I hope that this time they say cool and interesting things so that they don''t have to be muted again!"
-    automatically-expired: "After a lot of time silenced... The user finally learned to speak again! I hope that this time they say cool and interesting things so that they don''t have to be muted again!"
-  lock:
-    description: "Block users from talking in the channel where the command was executed"
-    denied: "Now no one can talk here!"
-    allowed: "Now everyone can talk!"
-  unlock:
-    description: "Unblocks users so that they can talk in the channel where the command was executed"
-# SOCIAL
-social:
-  reputation:
-    success: "{0} gave a reputation point to {1}, now {5} has **{2} reputation points!**! Do you want to give a reputation point too? {3} {4}" 
-# DISCORD
-discord:
-  add-emoji:
-    description: "Add emojis to your server with the link of the image. Perfect when you''re tired of downloading images to your computer just to add emojis to the server!"
-    success: "Emoji was successfully added!"
-    limit-reached: "The emoji limit (50 emojis) has already been reached!"
-    error: "I couldn''t add this emoji! Sorry for the inconvenience. :sob:"
-  user-info:
-    shared-servers: "Shared servers"
-    account-created: "Account created"
-    account-joined: "Joined"
-    join-position: "Join position"
-    permissions: "Permissions"
-    join-place: "{0} place"
-  emoji-info:
-    description: "Shows information about an emoji"
-    about-emoji: "About the emoji"
-    emoji-name: "Emoji name"
-    emoji-id: "Emoji ID"
-    mention: "Mention"
-    emoji-created: "Created"
-    seen-at: "Seen at"
-  old-members:
-    description: "Curious to see who are the server veterans? Use this command to see who are the oldest members!"
-    the-oldest-people: "Oldest members of {0}"
-  channel-info:
-    description: "Shows information about a text channel"
-    channel-mention: "Channel mention"
-    channel-created: "Channel created"
-    channel-topic: "Channel topic"
-    undefined: "Undefined"
-    channel-not-found: "Channel not found!"
-  emoji:
-    not-found-id: "As long as {0} looks like to be a valid ID for an emoji... I couldn''t find it in my emoji list! I am only able to get information from an emoji from it's ID if I am in the server that has it..."
-# ECONOMIA
-economy:
-  raffle:
-    quantity-bigger-than-allowed: "You can only bet a maximum amount of **{0} tickets** per round!"
-    has-too-many-tickets: "You have too many tickets! Keep some money for the next round!"
-    cant-buy-too-many-tickets: "You can''t buy this many tickets! You can only bet a maximum of more **{0} tickets**!"
-# MISCELÂNEA
-miscellaneous:
-  ajuda:
-    error-while-opening-dm: "I''d like to send the help message to you, but how am I supposed to send it if you have disabled your private messages between people on servers that you know? http://i.imgur.com/Z1HwW2j.png 🤷"
-  fan-arts:
-    description: "Check out the {0} awesome {1} fan arts people made for me!"
-    made-by: "an Art made by {0}"
-    thank-you-all: "Thanks to everyone that made awesome fan arts for me!"
-  language:
-    description: "Did you know that I can speak other languages? {0} Change the language that I speak in your server!"
-    please-select-your-language: "Please, select your desired language!"
-    translated-by: "Translated by"
-    language-changed: "Done! Now I will speak {0} in this server!"
+    - '297153970613387264'
+    - '@MrPowerGamerBR'
+    slap:
+      description: Use this command if someone deserves some slaps
+      response: '**{0} slapped {1}!**'
+      response-anti-idiot: '**How can you sleep at night after trying to hit a little girl like me?** {0} slapped {1}!'
+    kiss:
+      description: Use this command to kiss someone
+      response: '**{0} kissed {1}!**'
+      response-anti-idiot: Nah, I don''t wanna kiss you... but I still like you as a friend!
+    attack:
+      description: Use this command to attack someone
+      response: '**{0} attacked {1}!**'
+      response-anti-idiot: '**How dare you try to do this to me?** {0} attacked {1}!'
+    hug:
+      description: Use this command to give a loving hug to someone
+      response: '**{0} hugged {1}!**'
+    dance:
+      description: Use this command to dance with someone
+      response: '**{0} danced with {1}!**'
+  moderation:
+    unmute:
+      punishAction: Removed Mute
+      punishName: remove mute
+      sucessfullyUnmuted: The user has learned to talk again, I hope this time he will say interesting and cool things so he will not be silenced again!
+      automaticallyExpired: After spending so much time muted... the user finally learned how to talk again! I hope this time he will say cool and nice things to not be muted again!
+    lock:
+      description: Block users from speaking in the text channel where the command was executed
+      denied: Now nobody can talk here!
+      allowed: Now users can talk again!
+    unlock:
+      description: Unlocks users from speaking in the text channel where the command was executed
+  social:
+    reputation:
+      success: '{0} gave a reputation point to {1}, now {5} has **{2} reputations**! Want to give a reputation too? {3} {4}'
+  discord:
+    addEmoji:
+      description: Add emojis to your server from a image link. Perfect if you''re tired of downloading images to your computer just to add them on your server!
+      success: Emoji added successfully!
+      limitReached: You reached your server''s maximum emoji limit!
+      error: 'Não consegui adicionar este emoji! Desculpe pela incoveniência. :sob:'
+    userInfo:
+      sharedServers: Mutual servers
+      accountCreated: Account created
+      accountJoined: Joined
+      joinPosition: Join Position
+      permissions: Permissions
+      joinPlace: '{0} place'
+    emojiInfo:
+      description: Displays the information of an emoji
+      aboutEmoji: About the Emoji
+      emojiName: Emoji name
+      emojiId: Emoji''s ID
+      mention: Mention
+      emojiCreated: Created at
+      seenAt: Sighted in
+    oldMembers:
+      description: Curious to know who are the server veterans? Then check out who are the oldest members of the current server!
+      theOldestPeople: '{0}''s veterans'
+    channelInfo:
+      description: Shows information about a text channel
+      channelMention: Channel mention
+      channelCreated: Channel created
+      channelTopic: Channel topic
+      undefined: Undefined
+      channelNotFound: Channel not found!
+    emoji:
+      notFoundId: While {0} seems to be a valid ID for an emoji... I could not find it on my emojis list! I can only get information from an emoji from an ID if I am on the server where emoji is at...
+  economy:
+    raffle:
+      quantity-bigger-than-allowed: You can only bet at most **{0} tickets** per round!
+      hasTooManyTickets: You already have too many tickets! Save some of your money for the next round!
+      cantBuyTooManyTickets: You can not bet that many tickets! You can only bet, at most, more **{0} tickets**!
+  miscellaneous:
+    ajuda:
+      errorWhileOpeningDm: Eu queria enviar a ajuda para você, mas eu queria saber como eu vou enviar sendo que você desativou as mensagens privadas entre pessoas de servidores que você conhece. http://i.imgur.com/Z1HwW2j.png 🤷
+    fanArts:
+      description: See the {0} beautiful {1} fan arts that people made to me!
+      madeBy: Fan Art by {0}
+      thankYouAll: Thanks to everyone who made amazing and wonderful fan arts for me!
+    language:
+      description: Did you know that I can speak in other languages? {0} Change the language I speak on your server!
+      pleaseSelectYourLanguage: Choose the language you want!
+      translatedBy: Translated by
+      languageChanged: Okay, now I''m going to speak in {0} on this server!
