--- a/default/commands.yml
+++ b/default/commands.yml
@@ -7,6 +7,10 @@ commands:
   userDoesntHavePermissionDiscord: "Você não tem permissão para usar este comando! Para utilizá-lo, você precisa ter permissão para {0}!"
   userDoesNotExist: "Usuário inexistente!"
   errorWhileExecutingCommand: "Alguma coisa deu extremamente errada ao executar este comando... {0} Desculpe pela inconveniência. {1}"
+  ifYouLikeMyFeaturesAndWantToHelp: "Se você gosta de usar as minhas funcionalidades e quer me ajudar, por favor, {0}"
+  pleaseUpvote: "vote em mim! A cada voto que você dá você ganha recompensas (como sonhos!)! Você pode votar a cada 12 horas então... que tal começar votando agora? Ah, e é claro, obrigada pela ajuda! {0}"
+  pleaseDonate: "doe para me ajudar a ficar online! Qualquer doação me ajuda bastante e, ao doar, você ganhará recompensas exclusivas! Obrigada pela sua ajuda! {0}"
+  pleaseUseFortniteCreatorCode: "use o meu código de criadora no Fortnite/Epic Games Store! Cada compra com o meu código me ajuda a ficar online e, e é claro, obrigada pela sua ajuda! Código de Criador: {0}"
   arguments:
     text: "texto"
     number: "número"
