--- a/default/commands-images.yml
+++ b/default/commands-images.yml
@@ -8,7 +8,7 @@ commands:
       description: "A Loritta viu uma imagem sua e reagiu da melhor maneira possível."
     chicoata:
       description: "O Chico Bento viu uma imagem sua e reagiu da melhor maneira possível."
-    chicoata:
+    gessyatat:
       description: "O Gessy viu uma imagem sua e reagiu da melhor maneira possível."
     susto:
       description: "Ahhhhh 😱! Crie uma imagem de mim tomando susto sobre alguma coisa!"
@@ -35,6 +35,14 @@ commands:
       - "É Drawn Mask e não Draum Mésqui"
     canelladvd:
       description: "Faça com que Matheus Canella segure os melhores DVDs do mundo por apenas R$ 10,99 (erre cifrão um zero vírgula noventa e nove reais!!!)"
+    tobecontinued:
+      description: "*Você começa a escutar Roundabout tocando no fundo*"
+    emojimashup:
+      description: "Combine e misture os emojis padrões do Discord para formar novos emojis jamais vistos antes! Atualmente apenas smileys e alguns outros emojis suportados, mas mesmo assim as possibilidades são praticamente infinitas!"
+      invalidEmoji: "Emoji `{0}` inválido! Se for realmente um emoji, eu provavelmente ainda não recortei o emoji para que possa fazer aquela colagem marota com ele... mas talvez em breve você poderá utilizar esse emoji em suas misturas incríveis!"
+      invalidEmojiDiscord: "Emoji `{0}` não é um emoji padrão do Discord! Infelizmente juntar emojis personalizados do Discord seria muuuito difícil e trabalhoso, desculpe por ainda não conseguir juntar os seus maravilhosos emojis personalizados..."
+    buckshirt:
+      description: "Coloque uma estampa na camisa do Buck Dewey. Crie uma nova moda em Beach City!"
     tristerealidade:
       description: "Cria uma triste realidade com os membros do seu servidor... É, nem sempre a gente sai ganhando."
       slot:
