--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -28,11 +28,12 @@ commands:
     emoteNameSpecialChar: "O nome que você quer renomear tem caracteres especiais!"
     renameSucess: "Emoji renomeado!"
   guildbanner:
+    description: "Mostra o banner utilizado em cima dos canais de texto do servidor atual"
     noBanner: "Esse servidor não tem banner!"
   botinfo:
     embedDescription:
       - "Olá, eu me chamo Loritta (ou, como meus amigos próximos me chamam, \"Lori\"), tenho 16 anos e sou apenas um simples bot brasileiro para o Discord com várias funções jamais vistas antes! {6}"
-      - "Atualmente estou espalhando diversão em **{0} servidores** com **{2} comandos inovadores** e já executei **{3} comandos** desde quando eu acordei há **{1}** atrás 😴. Desde 30 de Março de 2017 tentando transformar o mundo em um lugar melhor! {8}"
+      - "Atualmente estou espalhando diversão em **{0} servidores** com **{2} comandos inovadores** e já executei **{3} comandos** desde quando eu acordei a **{1}** atrás 😴. Desde 30 de Março de 2017 tentando transformar o mundo em um lugar melhor! {8}"
       - "Eu fui criada em **{4} [Kotlin](https://kotlinlang.org/)** utilizando **{5} [JDA](https://github.com/DV8FromTheWorld/JDA)** e, se você quiser ver meu código-fonte (para ver como eu fui feita), [clique aqui](https://bit.ly/lorittagit)!"
       - "Se você quiser dar uma passadinha no meu website, [clique aqui](https://loritta.website/) e, caso queira me adicionar no seu servidor, [clique aqui](https://loritta.website/dashboard)! {7}"
     honorableMentions:
